# community-service

./: .gitignore  cdk.json  package-lock.json  package.json
lib/: community-service-stack.ts
lib/app/stateful/: stateful-stack.ts
lib/app/stateless/: stateless-stack.ts
lib/pipeline/: index.ts
lib/pipeline/configs/: index.ts
lib/pipeline/stage/: index.ts
lib/pipeline/types/: index.ts
src/: Cargo.toml
src/lambdas/create-event/: Cargo.toml  README.md
src/lambdas/create-event/src/: http_handler.rs  main.rs
src/lambdas/health-check/: Cargo.toml  README.md
src/lambdas/health-check/src/: http_handler.rs
src/shared/: Cargo.toml
src/shared/src/: response.rs
test/: community-service.test.ts
